@@ -7,3 +7,5 @@ inherit-non-class:68:0:NotInheritableBool:Inheriting 'bool', which is not a clas
 inherit-non-class:72:0:NotInheritableRange:Inheriting 'range', which is not a class.
 inherit-non-class:76:0:NotInheritableSlice:Inheriting 'slice', which is not a class.
 inherit-non-class:80:0:NotInheritableMemoryView:Inheriting 'memoryview', which is not a class.
+inherit-non-class:99:0:Child2:Inheriting 'ParentBad[int]', which is not a class.:HIGH
+unsubscriptable-object:103:13:Child3:Value 'Empty' is unsubscriptable:HIGH
